--- a/editor/index.css
+++ b/editor/index.css
@@ -1,10 +1,10 @@
 .cm-editor {
   width: 100%;
   height: 100%;
-  border: 1px solid #ccc;
+  /* border: 1px solid #ccc; */
 
   .cm-line {
-    line-height: 1.1 !important;
+    /* line-height: 1.1 !important; */
   }
 
   .cm-output-line:first-child,
@@ -12,7 +12,7 @@
     /* The first of a contiguous sequence. */
     /*padding-top: 1px;*/
     margin-top: 0px;
-    border-top: 2px solid #dfdfdf;
+    /* border-top: 2px solid #dfdfdf; */
   }
 
   .cm-output-line:last-child,
@@ -20,11 +20,11 @@
     /* The last element of a contiguous sequence. */
     /*padding-bottom: 1px;*/
     margin-bottom: 0px;
-    border-bottom: 2px solid #dfdfdf;
+    /* border-bottom: 2px solid #dfdfdf; */
   }
 
   /* Set the background pattern for output lines. */
   .cm-output-line {
-    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='4' height='4' viewBox='0 0 4 4'%3E%3Cpath fill='%237d7d7d' fill-opacity='0.4' d='M1 3h1v1H1V3zm2-2h1v1H3V1z'%3E%3C/path%3E%3C/svg%3E");
+    /* background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='4' height='4' viewBox='0 0 4 4'%3E%3Cpath fill='%237d7d7d' fill-opacity='0.4' d='M1 3h1v1H1V3zm2-2h1v1H3V1z'%3E%3C/path%3E%3C/svg%3E"); */
   }
 }
