Use Inter and Spline Sans Mono (#63)
* Use Inter and Spline Sans Mono

* Fix font names

---------

Co-authored-by: pearmini <subairui@icloud.com>

--- a/app/global.css
+++ b/app/global.css
@@ -1,5 +1,12 @@
 @import "tailwindcss";
 @import "../editor/index.css";
+@import "@fontsource-variable/inter";
+@import "@fontsource-variable/spline-sans-mono";
+
+@theme {
+  --default-font-family: "Inter Variable";
+  --font-mono: "Spline Sans Mono Variable";
+}
 
 button {
   cursor: pointer;
