--- a/editor/index.css
+++ b/editor/index.css
@@ -47,4 +47,8 @@
   .cm-output-line {
     /* background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='4' height='4' viewBox='0 0 4 4'%3E%3Cpath fill='%237d7d7d' fill-opacity='0.4' d='M1 3h1v1H1V3zm2-2h1v1H3V1z'%3E%3C/path%3E%3C/svg%3E"); */
   }
+
+  .cm-doc-tag span {
+    color: #cf222e !important;
+  }
 }
