--- a/editor/index.css
+++ b/editor/index.css
@@ -7,6 +7,8 @@
   --output-border-color: #19130029;
   --output-content-color: #21201c;
 
+  --button-border-color: #dad9d6;
+
   .cm-boolean-toggle {
     display: inline-flex;
     align-items: center;
@@ -29,6 +31,56 @@
     > input {
       width: 1rem;
       height: 1rem;
+    }
+  }
+
+  .cm-number-input {
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    vertical-align: text-top;
+
+    &.cm-number-inc {
+      margin-left: 0.25rem;
+      > button {
+        /*width: 15px;*/
+        /*height: 15px;*/
+        background-image: url("data:image/svg+xml,%3Csvg width='15' height='15' viewBox='0 0 15 15' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M8 2.75C8 2.47386 7.77614 2.25 7.5 2.25C7.22386 2.25 7 2.47386 7 2.75V7H2.75C2.47386 7 2.25 7.22386 2.25 7.5C2.25 7.77614 2.47386 8 2.75 8H7V12.25C7 12.5261 7.22386 12.75 7.5 12.75C7.77614 12.75 8 12.5261 8 12.25V8H12.25C12.5261 8 12.75 7.77614 12.75 7.5C12.75 7.22386 12.5261 7 12.25 7H8V2.75Z' fill='currentColor' fill-rule='evenodd' clip-rule='evenodd'%3E%3C/path%3E%3C/svg%3E");
+      }
+    }
+
+    &.cm-number-dec {
+      margin-right: 0.25rem;
+      > button {
+        /*width: 15px;*/
+        /*height: 15px;*/
+        background-image: url("data:image/svg+xml,%3Csvg width='15' height='15' viewBox='0 0 15 15' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M2.25 7.5C2.25 7.22386 2.47386 7 2.75 7H12.25C12.5261 7 12.75 7.22386 12.75 7.5C12.75 7.77614 12.5261 8 12.25 8H2.75C2.47386 8 2.25 7.77614 2.25 7.5Z' fill='currentColor' fill-rule='evenodd' clip-rule='evenodd'%3E%3C/path%3E%3C/svg%3E");
+      }
+    }
+
+    > button {
+      box-sizing: content-box;
+      width: 15px;
+      height: 15px;
+      border: 1px solid #bcbbb5;
+      border-radius: 0.125rem;
+      background-color: #f1f0ef;
+      cursor: pointer;
+      transition: background-color 0.2s ease-in-out;
+
+      &[data-disabled] {
+        background-color: #bcbbb5;
+        border-color: #82827c;
+        cursor: not-allowed;
+      }
+
+      &:not([data-disabled]):hover {
+        background-color: #e9e8e6;
+      }
+
+      &:not([data-disabled]):active {
+        background-color: #e2e1de;
+      }
     }
   }
 
