--- a/test/index.css
+++ b/test/index.css
@@ -1,1 +1,41 @@
 @import "../editor/index.css";
+
+body {
+  font-family:
+    system-ui,
+    -apple-system,
+    BlinkMacSystemFont,
+    "Segoe UI",
+    Roboto,
+    Oxygen,
+    Ubuntu,
+    Cantarell,
+    "Open Sans",
+    "Helvetica Neue",
+    sans-serif;
+  font-size: 16px;
+
+  margin: 0;
+  padding: 0.5rem;
+  box-sizing: border-box;
+  display: flex;
+  flex-direction: row;
+  gap: 0.5rem;
+  height: 100vh;
+  width: 100vw;
+
+  main {
+    flex: 1;
+    background: #55550003;
+    border: 1px solid #19130029;
+    padding: 0.75rem;
+  }
+
+  aside {
+    width: 25rem;
+    padding: 0.75rem;
+    background: #25250007;
+    border: 1px solid #19130029;
+    overflow-y: auto;
+  }
+}
